# NuDCA

./: .readthedocs.yaml  API_REFERENCE.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py  test.py
data/: ENDF-B-VIII.1_SF.csv  ENDF-B-VIII.1_SF_Fragment.csv  ENDF-B-VIII.1_SF_Fragment.json  ENDF-B-VIII.1_SF_Fragment.xlsx  ENDF-B-VIII.1_SF_Fragment_filtered.json  SkyNet_Y.xlsx  SkyNet_Y_filtered.xlsx  SkyNet_Y_init.xlsx  nndc.csv  nndc_new.csv  solar_r_abundance_pattern.xlsx
data/AT2017gfo/: Lbol_Smartt2017.xlsx  Lbol_Waxman2018.xlsx
data/Solar_Abundance/: solar_Arlandini1999.xlsx  solar_Arnould2007.xlsx  solar_Prantzos2020.xlsx  solar_Sneden2008.xlsx
docs/: requirements.txt
docs/source/: changelog.rst  conf.py  index.rst  installation.rst
examples/: AT2017gfo.ipynb  SF.ipynb  SF_Fragment.ipynb  decay_core.ipynb  decay_database.ipynb  decay_diagram.ipynb  decay_matrix.ipynb  decay_network.ipynb  io.ipynb  nucleo_decay.ipynb  nuclide.ipynb  test.ipynb
examples/kilonovae/: geometry.ipynb  heating_rate.ipynb  lightcurve.ipynb  opacity.ipynb
nudca/: __init__.py  abundance_calculator.py  constants.py  decay_core.py  decay_database.py  decay_diagram.py  decay_matrix.py  decay_network.py  io.py  nucleo_decay.py  nuclide.py  plot.py  utils.py
nudca/__pycache__/: decay_core.calculate_radioactive_heating_rates-329.py313.1.nbc  decay_core.calculate_radioactive_heating_rates-329.py313.nbi  decay_core.calculate_radioactive_heating_rates-330.py313.1.nbc  decay_core.calculate_radioactive_heating_rates-330.py313.nbi  decay_core.calculate_radioactive_heating_rates-331.py313.1.nbc  decay_core.calculate_radioactive_heating_rates-331.py313.nbi  decay_core.calculate_radioactive_heating_rates-333.py313.1.nbc  decay_core.calculate_radioactive_heating_rates-333.py313.nbi  decay_core.calculate_radioactive_heating_rates-334.py312.1.nbc  decay_core.calculate_radioactive_heating_rates-334.py312.nbi  decay_core.calculate_radioactive_heating_rates-334.py313.1.nbc  decay_core.calculate_radioactive_heating_rates-334.py313.nbi  decay_core.calculate_radioactive_heating_rates-335.py313.1.nbc  decay_core.calculate_radioactive_heating_rates-335.py313.nbi  decay_core.calculate_radioactive_heating_rates-338.py313.1.nbc  decay_core.calculate_radioactive_heating_rates-338.py313.nbi  decay_core.calculate_radioactive_heating_rates-341.py313.1.nbc  decay_core.calculate_radioactive_heating_rates-341.py313.nbi  decay_core.calculate_radioactive_heating_rates-342.py313.1.nbc  decay_core.calculate_radioactive_heating_rates-342.py313.nbi  decay_core.calculate_radioactive_heating_rates-343.py312.1.nbc  decay_core.calculate_radioactive_heating_rates-343.py312.nbi  decay_core.calculate_radioactive_heating_rates-343.py313.1.nbc  decay_core.calculate_radioactive_heating_rates-343.py313.nbi  (+12 more)
scripts/: converters.py  endf_filehandler.py  parse_ame2020.py  parse_nubase.py
tests/: test_decay_database.py  test_decay_diagram.py  test_decay_matrix.py  test_nucleo_decay.py  test_radioactive_decay.py
(+188 files in other folders)
