[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[tool.poetry]
name = "nudca"
version = "0.1.0"
description = "A scientific computing library for nuclear decay and kilonovae research"
authors = ["Qiuhong-Chen <chohonche@163.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nudca"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Nuclear Physics",
]


[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
scipy = "^1.7.0"
matplotlib = "^3.4.0"
pandas = "^1.3.0"
h5py = "^3.6.0"
tqdm = "^4.62.0"
python-dotenv = "^0.19.2"


[tool.poetry.group.dev.dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.0"
flake8 = "^3.9.2"
black = "^22.3.0"
isort = "^5.10.0"
mypy = "^0.910"
sphinx = "^4.0.0"
sphinx-rtd-theme = "^1.0.0"


[tool.poetry.scripts]
nudca = "nudca.cli:main"


[tool.poetry.urls]
homepage = "https://example.com"
documentation = "https://example.com/docs"


[tool.poetry.plugins]
# "plugin_name" = "module.entry_point"


[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'


[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88


[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=nudca --cov-report=term-missing"
