[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nudca"
version = "0.1.0"
description = "A Numerical Code for Nuclear Decay Chains in Astrophysics"
authors = [
    { name = "Qiuhong-Chen", email = "chohonche@163.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["nuclear", "decay", "astrophysics", "kilonova", "r-process"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "astropy",
    "matplotlib",
    "numba",
    "networkx"
]

[project.urls]
Documentation = "https://nudca-code.github.io/nudca.github.io/"
Source = "https://github.com/nudca-code/NuDCA"
Tracker = "https://github.com/nudca-code/NuDCA/issues"
